test_files/bad/bad_formla.ru
def A "s p a c e" ".p.o.i.n.t.s."

if "s p a c e" or ".p.o.i.n.t.s" then X